# olxbrasil

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  main.yml  publish.yml
olxbrasil/: __init__.py  constants.py  exceptions.py  filters.py  service.py  utils.py
olxbrasil/parsers/: __init__.py  base.py  car_parser.py  generic_parser.py  list_parser.py
tests/: __init__.py  conftest.py  data.py  test_base_parser.py  test_car_filter.py  test_car_parser.py  test_constants.py  test_generic_parser.py  test_item_filter.py  test_item_parser.py  test_list_parser.py  test_location_filter.py  test_olx_async_service.py  test_olx_service.py  test_utils.py
tests/assets/: apartment.html  hyundai.html  listing.html
tests/assets/car/hyundai/: ads.js  async-ads.js  css.css  lurker.js  mercurie-widget.js
tests/assets/listagem/listagem_arquivos/: ScrollBanner.js  cookie-notice.js  css.css  native.js
tests/cassettes/: test_async_olx_service_get_all_ids_with_invalid_page.yaml  test_async_olx_service_get_all_ids_with_sub_category.yaml  test_async_olx_service_get_all_ids_without_sub_category.yaml  test_async_olx_service_get_item.yaml  test_olx_service_fetch_all_ids_with_invalid_page.yaml  test_olx_service_fetch_all_ids_with_sub_category.yaml  test_olx_service_fetch_all_ids_with_sub_category_and_location.yaml  test_olx_service_fetch_all_ids_without_sub_category.yaml  test_olx_service_get_item.yaml
